--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Meine Mainpage</title>
+  <title>My Main Page</title>
 </head>
 <body>
-  <h1>Willkommen auf meiner Mainpage!</h1>
+  <h1>Welcome to My Main Page!</h1>
   <ul>
-    <li><a href="https://papiergeld-casino.github.io">Papiergeld Casino</a></li>
-    <li><a href="https://papiergeld-crypto.github.io">Papiergeld Crypto</a></li>
-    <li><a href="https://spiele.github.io">Spiele</a></li>
+    <li><a href="https://papiergeld-casino.github.io">Paper Money Casino</a></li>
+    <li><a href="https://papiergeld-crypto.github.io">Paper Money Crypto Market</a></li>
+    <li><a href="https://games.github.io">Games (Minesweeper, Snake, etc.)</a></li>
   </ul>
 </body>
 </html>
